solved  pic not showing problem

--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@ padding: 15px 30px;
     justify-content: space-between;
     align-items: center;
     padding: 24px 160px 24px 160px;
-    
+    background: rgb(245, 245, 245); 
 }
 .content{
 
